--- a/stackx_list_angular/src/styles.scss
+++ b/stackx_list_angular/src/styles.scss
@@ -1,1 +1,43 @@
-/* You can add global styles to this file, and also import other style files */
+//
+
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;500;600;700&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Nunito+Sans:wght@400;700&family=Open+Sans:wght@300;400&family=Roboto+Flex:opsz@8..144&display=swap');
+
+:root {
+  --background: #09090A;
+  --white: #FFFFFF;
+  --white-600: #F0F0F0;
+  --white-400: #EDEDED;
+
+  --grey-300: #C6C6D3;
+  --grey-400: #A1A1AA;
+
+  --dark-300: #3F3F46;
+  --dark-400: #27272A;
+  --dark-500: #3E3E41;
+  --dark-600: #1C1C1C;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  background: var(--background);
+  -webkit-font-smoothing: antialised;
+}
+
+body, input, textarea, button {
+  font-family: 'Inter', sans-serif;
+  font-weight: 400;
+  font-size: 1rem;
+}
+
+h1, h2, h3, h4, h5, h6, strong {
+  font-weight: 600;
+}
+
+button {
+  cursor: pointer;
+}
