--- a/stackx_list_angular/src/styles.scss
+++ b/stackx_list_angular/src/styles.scss
@@ -1,3 +1,38 @@
+
+// Custom Theming for Angular Material
+// For more information: https://material.angular.io/guide/theming
+@use '@angular/material' as mat;
+// Plus imports for other components in your app.
+
+// Include the common styles for Angular Material. We include this here so that you only
+// have to load a single css file for Angular Material in your app.
+// Be sure that you only ever include this mixin once!
+@include mat.core();
+
+// Define the palettes for your theme using the Material Design palettes available in palette.scss
+// (imported above). For each palette, you can optionally specify a default, lighter, and darker
+// hue. Available color palettes: https://material.io/design/color/
+$stackx_list_angular-primary: mat.define-palette(mat.$indigo-palette);
+$stackx_list_angular-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+
+// The warn palette is optional (defaults to red).
+$stackx_list_angular-warn: mat.define-palette(mat.$red-palette);
+
+// Create the theme object. A theme consists of configurations for individual
+// theming systems such as "color" or "typography".
+$stackx_list_angular-theme: mat.define-light-theme((
+  color: (
+    primary: $stackx_list_angular-primary,
+    accent: $stackx_list_angular-accent,
+    warn: $stackx_list_angular-warn,
+  )
+));
+
+// Include theme styles for core and each component used in your app.
+// Alternatively, you can import and @include the theme mixins for each component
+// that you are using.
+@include mat.all-component-themes($stackx_list_angular-theme);
+
 //
 
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;500;600;700&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Nunito+Sans:wght@400;700&family=Open+Sans:wght@300;400&family=Roboto+Flex:opsz@8..144&display=swap');
@@ -41,3 +76,6 @@ h1, h2, h3, h4, h5, h6, strong {
 button {
   cursor: pointer;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
