--- a/stackx_list_angular/src/app/components/modal/modal.component.html
+++ b/stackx_list_angular/src/app/components/modal/modal.component.html
@@ -13,7 +13,7 @@
     </div>
 
     <div class="info-user-modal">
-      <p><strong>Nome: </strong>{{ userData.name.first }} {{ userData.name.last }}</p>
+      <p><strong>Nome: </strong>{{ userData.name.first }}</p>
       <p><strong>E-mail: </strong>{{ userData.email }}</p>
       <p><strong>Celular: </strong>{{ userData.cell }}</p>
       <p><strong>Idade: </strong>{{ userData.dob.age }} anos</p>
