Resolvido erro de filtragem por nacionalidade, Parte V Ok, Projeto finalizado

--- a/stackx_list_angular/src/app/screens/home/home.component.html
+++ b/stackx_list_angular/src/app/screens/home/home.component.html
@@ -24,7 +24,7 @@
               name="nascionalidade"
               id="nascionalidade"
               title="."
-              formControlName="nacionality"
+              formControlName="nationality"
               (change)="searchName('nation')"
             >
               <option value="">Todas</option>
